--- a/index.html
+++ b/index.html
@@ -1,532 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Income Expense Calculator</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    body {
-      background: #f4f7fc;
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Income Expense Calculator</title>
 
-    header {
-      background: #003366;
-      color: white;
-      padding: 1rem 2rem;
-      box-shadow: 0 4px 6px rgb(0 0 0 / 0.1);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    header h1 {
-      font-weight: 700;
-      font-size: 1.8rem;
-      letter-spacing: 1.2px;
-    }
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 1.5rem;
-    }
-    nav ul li a {
-      font-weight: 600;
-      transition: color 0.3s ease;
-    }
-    nav ul li a:hover {
-      color: #ffc107;
-    }
+<!-- Chart & Excel -->
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
-    main {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      padding: 2rem;
-    }
+<style>
+*{box-sizing:border-box;margin:0;padding:0;font-family:Segoe UI,Tahoma}
+body{background:#f4f7fc;display:flex;flex-direction:column;min-height:100vh}
+header,footer{background:#003366;color:#fff;text-align:center;padding:1rem}
+main{flex:1;display:flex;justify-content:center;padding:1rem}
 
-    .calculator {
-      background: white;
-      width: 100%;
-      max-width: 600px;
-      border-radius: 10px;
-      box-shadow: 0 10px 20px rgb(0 0 0 / 0.1);
-      padding: 2rem;
-    }
+.calculator{background:#fff;max-width:650px;width:100%;padding:1.5rem;border-radius:10px;box-shadow:0 10px 20px rgba(0,0,0,.1)}
+h2{text-align:center;color:#003366;margin-bottom:1rem}
 
-    .calculator h2 {
-      text-align: center;
-      font-weight: 700;
-      margin-bottom: 1.5rem;
-      color: #003366;
-    }
+.summary{display:flex;gap:1rem;flex-wrap:wrap;margin-bottom:1rem}
+.summary-item{flex:1;background:#e8f0fe;padding:1rem;border-radius:8px;text-align:center}
+.income{color:#2e7d32}
+.expense{color:#c62828}
+.net{color:#1565c0}
 
-    .summary {
-      display: flex;
-      justify-content: space-around;
-      margin-bottom: 2rem;
-      text-align: center;
-      gap: 1rem;
-      flex-wrap: wrap;
-    }
-    .summary-item {
-      flex: 1 1 30%;
-      background: #e8f0fe;
-      border-radius: 8px;
-      padding: 1rem 0;
-      box-shadow: inset 0 0 8px #b3d1ff;
-      transition: background 0.3s ease;
-    }
-    .summary-item:hover {
-      background: #c6d9ff;
-    }
-    .summary-item p.label {
-      font-weight: 600;
-      margin-bottom: 0.5rem;
-      color: #555;
-      letter-spacing: 0.05em;
-      font-size: 0.9rem;
-    }
-    .summary-item p.amount {
-      font-size: 1.8rem;
-      font-weight: 700;
-    }
-    .income-amount {
-      color: #2e7d32;
-    }
-    .expense-amount {
-      color: #c62828;
-    }
-    .net-amount {
-      color: #1565c0;
-    }
+form{display:flex;gap:1rem;flex-wrap:wrap;margin-bottom:1rem}
+input,select,button{padding:.7rem;border-radius:6px;border:1px solid #ccc}
+button{background:#003366;color:#fff;border:none;cursor:pointer}
+button:hover{opacity:.9}
+#resetBtn{background:#c62828}
 
-    form {
-      display: flex;
-      gap: 1rem;
-      flex-wrap: wrap;
-      margin-bottom: 1.5rem;
-      justify-content: center;
-    }
-    form input[type="text"],
-    form input[type="number"],
-    form select {
-      flex: 1 1 150px;
-      padding: 0.75rem 1rem;
-      border: 2px solid #ccc;
-      border-radius: 8px;
-      font-size: 1rem;
-      transition: border-color 0.3s ease;
-    }
-    form input[type="text"]:focus,
-    form input[type="number"]:focus,
-    form select:focus {
-      outline: none;
-      border-color: #003366;
-      box-shadow: 0 0 8px #003366aa;
-    }
-    form button {
-      background: #003366;
-      color: white;
-      border: none;
-      padding: 0.75rem 1.5rem;
-      border-radius: 8px;
-      font-weight: 700;
-      cursor: pointer;
-      transition: background 0.3s ease;
-      flex: 1 1 100px;
-      min-width: 100px;
-    }
-    form button:hover {
-      background: #002244;
-    }
-    form button#resetBtn {
-      background: #c62828;
-    }
-    form button#resetBtn:hover {
-      background: #b71c1c;
-    }
+.filters{display:flex;justify-content:center;gap:1.5rem;margin-bottom:1rem}
 
-    .filters {
-      display: flex;
-      justify-content: center;
-      gap: 2.5rem;
-      margin-bottom: 1.5rem;
-      flex-wrap: wrap;
-    }
-    .filters label {
-      font-weight: 600;
-      cursor: pointer;
-      user-select: none;
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      color: #003366;
-    }
-    .filters input[type="radio"] {
-      cursor: pointer;
-      width: 18px;
-      height: 18px;
-      accent-color: #003366;
-    }
+ul{list-style:none;max-height:250px;overflow-y:auto}
+li{display:flex;justify-content:space-between;padding:.7rem;border-bottom:1px solid #eee}
 
-    #entryList {
-      max-height: 320px;
-      overflow-y: auto;
-      border-top: 2px solid #ddd;
-      border-radius: 0 0 10px 10px;
-    }
-    #entryList li {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 1rem;
-      border-bottom: 1px solid #eee;
-      transition: background 0.2s ease;
-    }
-    #entryList li:hover {
-      background: #f0f6ff;
-    }
-    #entryList li:last-child {
-      border-bottom: none;
-    }
-
-    .entry-info {
-      max-width: 70%;
-    }
-    .entry-desc {
-      font-weight: 600;
-      font-size: 1rem;
-      margin-bottom: 0.25rem;
-      color: #222;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-    .entry-amount {
-      font-weight: 700;
-      font-size: 1.1rem;
-    }
-    .income-color {
-      color: #2e7d32;
-    }
-    .expense-color {
-      color: #c62828;
-    }
-
-    .entry-actions button {
-      background: none;
-      border: none;
-      color: #0059b3;
-      cursor: pointer;
-      font-weight: 600;
-      margin-left: 1rem;
-      transition: color 0.2s ease;
-    }
-    .entry-actions button:hover {
-      color: #ff9800;
-    }
-    .entry-actions button.delete-btn {
-      color: #c62828;
-    }
-    .entry-actions button.delete-btn:hover {
-      color: #b71c1c;
-    }
-
-    footer {
-      background: #003366;
-      color: white;
-      text-align: center;
-      padding: 1rem 2rem;
-      font-size: 0.9rem;
-      font-weight: 500;
-      margin-top: auto;
-    }
-
-    @media (max-width: 600px) {
-      form {
-        flex-direction: column;
-      }
-      form input, form select, form button {
-        width: 100%;
-      }
-      .summary {
-        flex-direction: column;
-      }
-      .summary-item {
-        flex: 1 1 auto;
-        margin-bottom: 1rem;
-      }
-      #entryList li {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 0.5rem;
-      }
-      .entry-info {
-        max-width: 100%;
-      }
-      .entry-actions {
-        align-self: flex-end;
-      }
-    }
-  </style>
+@media(max-width:600px){
+.summary{flex-direction:column}
+form{flex-direction:column}
+li{flex-direction:column;gap:.5rem}
+}
+</style>
 </head>
+
 <body>
 
-  <header>
-    <h1>Finance Tracker</h1>
-   
-  </header>
+<header>
+<h1>Finance Tracker</h1>
+</header>
 
-  <main>
-    <section class="calculator">
-      <h2>Income Expense Calculator</h2>
+<main>
+<div class="calculator">
 
-      <div class="summary">
-        <div class="summary-item">
-          <p class="label">Total Income</p>
-          <p id="totalIncome" class="amount income-amount">0.00</p>
-        </div>
-        <div class="summary-item">
-          <p class="label">Total Expense</p>
-          <p id="totalExpense" class="amount expense-amount">0.00</p>
-        </div>
-        <div class="summary-item">
-          <p class="label">Net Balance</p>
-          <p id="netBalance" class="amount net-amount">RS.0.00</p>
-        </div>
-      </div>
+<h2>Income Expense Calculator</h2>
 
-      <form id="entryForm" autocomplete="off">
-        <input
-          type="text"
-          id="description"
-          placeholder="Description"
-          required
-          maxlength="50"
-          spellcheck="false"
-        />
-        <input
-          type="number"
-          id="amount"
-          placeholder="Amount"
-          min="0.01"
-          step="0.01"
-          required
-        />
-        <select id="type" required>
-          <option value="income">Income</option>
-          <option value="expense">Expense</option>
-        </select>
-        <button type="submit">Add</button>
-        <button type="button" id="resetBtn">Reset</button>
-      </form>
+<div class="summary">
+  <div class="summary-item">
+    <p>Total Income</p>
+    <h3 id="totalIncome" class="income">RS.0.00</h3>
+  </div>
+  <div class="summary-item">
+    <p>Total Expense</p>
+    <h3 id="totalExpense" class="expense">RS.0.00</h3>
+  </div>
+  <div class="summary-item">
+    <p>Net Balance</p>
+    <h3 id="netBalance" class="net">RS.0.00</h3>
+  </div>
+</div>
 
-      <div class="filters" aria-label="Filter entries">
-        <label><input type="radio" name="filter" value="all" checked /> All</label>
-        <label><input type="radio" name="filter" value="income" /> Income</label>
-        <label><input type="radio" name="filter" value="expense" /> Expense</label>
-      </div>
+<form id="entryForm">
+<input id="description" placeholder="Description" required>
+<input id="amount" type="number" step="0.01" required>
+<select id="type">
+<option value="income">Income</option>
+<option value="expense">Expense</option>
+</select>
+<button type="submit">Add</button>
+<button type="button" id="resetBtn">Reset</button>
+</form>
 
-      <ul id="entryList" aria-live="polite" aria-relevant="additions removals"></ul>
-    </section>
-  </main>
+<div class="filters">
+<label><input type="radio" name="filter" value="all" checked> All</label>
+<label><input type="radio" name="filter" value="income"> Income</label>
+<label><input type="radio" name="filter" value="expense"> Expense</label>
+</div>
 
-  <footer>
-    <p>© 2025 Finance Tracker. All rights reserved.</p>
-  </footer>
+<div style="text-align:center;margin-bottom:1rem">
+<button onclick="exportToExcel()" style="background:#2e7d32">Export to Excel</button>
+</div>
 
-  <script>
-    // DOM elements
-    const form = document.getElementById('entryForm');
-    const descriptionInput = document.getElementById('description');
-    const amountInput = document.getElementById('amount');
-    const typeSelect = document.getElementById('type');
-    const entryList = document.getElementById('entryList');
-    const totalIncomeElem = document.getElementById('totalIncome');
-    const totalExpenseElem = document.getElementById('totalExpense');
-    const netBalanceElem = document.getElementById('netBalance');
-    const resetBtn = document.getElementById('resetBtn');
-    const filterRadios = document.querySelectorAll('input[name="filter"]');
+<ul id="entryList"></ul>
 
-    let entries = JSON.parse(localStorage.getItem('entries')) || [];
-    let editId = null;
+<canvas id="dailyChart" style="margin-top:25px"></canvas>
 
-    function saveEntries() {
-      localStorage.setItem('entries', JSON.stringify(entries));
-    }
+</div>
+</main>
 
-    function formatAmount(num) {
-      return 'RS.' + Number(num).toFixed(2);
-    }
+<footer>
+© 2025 Finance Tracker
+</footer>
 
-    function renderEntries(filter = 'all') {
-      entryList.innerHTML = '';
+<script>
+const form=document.getElementById("entryForm");
+const entryList=document.getElementById("entryList");
+const totalIncome=document.getElementById("totalIncome");
+const totalExpense=document.getElementById("totalExpense");
+const netBalance=document.getElementById("netBalance");
+const resetBtn=document.getElementById("resetBtn");
+const filterRadios=document.querySelectorAll("input[name=filter]");
 
-      const filteredEntries = entries.filter(e => {
-        if (filter === 'all') return true;
-        return e.type === filter;
-      });
+let entries=JSON.parse(localStorage.getItem("entries"))||[];
+let chart;
 
-      if (filteredEntries.length === 0) {
-        entryList.innerHTML = `<li style="text-align:center; color:#777; padding: 1rem;">No entries found.</li>`;
-        return;
-      }
+function save(){localStorage.setItem("entries",JSON.stringify(entries))}
 
-      filteredEntries.forEach(entry => {
-        const li = document.createElement('li');
+function render(filter="all"){
+entryList.innerHTML="";
+entries.filter(e=>filter==="all"||e.type===filter)
+.forEach(e=>{
+const li=document.createElement("li");
+li.innerHTML=`
+<strong>${e.description}</strong>
+<span>${e.type==="income"?"+":"-"}RS.${e.amount}</span>
+<small>${e.date}</small>
+<button onclick="del(${e.id})">❌</button>`;
+entryList.appendChild(li);
+});
+updateSummary();
+renderChart();
+}
 
-        const infoDiv = document.createElement('div');
-        infoDiv.className = 'entry-info';
+function updateSummary(){
+let inc=0,exp=0;
+entries.forEach(e=>e.type==="income"?inc+=e.amount:exp+=e.amount);
+totalIncome.textContent="RS."+inc.toFixed(2);
+totalExpense.textContent="RS."+exp.toFixed(2);
+netBalance.textContent="RS."+(inc-exp).toFixed(2);
+}
 
-        const descP = document.createElement('p');
-        descP.className = 'entry-desc';
-        descP.textContent = entry.description;
+form.onsubmit=e=>{
+e.preventDefault();
+entries.push({
+id:Date.now(),
+description:description.value,
+amount:+amount.value,
+type:type.value,
+date:new Date().toLocaleDateString()
+});
+save();form.reset();render(getFilter());
+};
 
-        const amountP = document.createElement('p');
-        amountP.className = 'entry-amount ' + (entry.type === 'income' ? 'income-color' : 'expense-color');
-        amountP.textContent = (entry.type === 'expense' ? '-' : '+') + formatAmount(entry.amount);
+function del(id){
+entries=entries.filter(e=>e.id!==id);
+save();render(getFilter());
+}
 
-        infoDiv.appendChild(descP);
-        infoDiv.appendChild(amountP);
+resetBtn.onclick=()=>{
+if(confirm("Reset all?")){
+entries=[];save();render();
+}
+};
 
-        const actionsDiv = document.createElement('div');
-        actionsDiv.className = 'entry-actions';
+filterRadios.forEach(r=>r.onchange=()=>render(getFilter()));
+function getFilter(){return document.querySelector("input[name=filter]:checked").value}
 
-        const editBtn = document.createElement('button');
-        editBtn.textContent = 'Edit';
-        editBtn.setAttribute('aria-label', `Edit entry: RS.{entry.description}`);
-        editBtn.addEventListener('click', () => startEditEntry(entry.id));
+function renderChart(){
+const daily={};
+entries.forEach(e=>{
+daily[e.date]??={income:0,expense:0};
+daily[e.date][e.type]+=e.amount;
+});
+const labels=Object.keys(daily);
+const income=labels.map(d=>daily[d].income);
+const expense=labels.map(d=>daily[d].expense);
 
-        const deleteBtn = document.createElement('button');
-        deleteBtn.textContent = 'Delete';
-        deleteBtn.className = 'delete-btn';
-        deleteBtn.setAttribute('aria-label', `Delete entry: RS.{entry.description}`);
-        deleteBtn.addEventListener('click', () => deleteEntry(entry.id));
+const ctx=document.getElementById("dailyChart");
+if(chart)chart.destroy();
+chart=new Chart(ctx,{
+type:"bar",
+data:{labels,datasets:[
+{label:"Income",data:income},
+{label:"Expense",data:expense}
+]},
+options:{responsive:true}
+});
+}
 
-        actionsDiv.appendChild(editBtn);
-        actionsDiv.appendChild(deleteBtn);
+function exportToExcel(){
+const data=entries.map(e=>({
+Date:e.date,Description:e.description,Type:e.type,Amount:e.amount
+}));
+const ws=XLSX.utils.json_to_sheet(data);
+const wb=XLSX.utils.book_new();
+XLSX.utils.book_append_sheet(wb,ws,"Report");
+XLSX.writeFile(wb,"Income_Expense.xlsx");
+}
 
-        li.appendChild(infoDiv);
-        li.appendChild(actionsDiv);
+render();
+</script>
 
-        entryList.appendChild(li);
-      });
-    }
-
-    function updateSummary() {
-      const incomeTotal = entries
-        .filter(e => e.type === 'income')
-        .reduce((sum, e) => sum + Number(e.amount), 0);
-      const expenseTotal = entries
-        .filter(e => e.type === 'expense')
-        .reduce((sum, e) => sum + Number(e.amount), 0);
-      const net = incomeTotal - expenseTotal;
-
-      totalIncomeElem.textContent = formatAmount(incomeTotal);
-      totalExpenseElem.textContent = formatAmount(expenseTotal);
-      netBalanceElem.textContent = formatAmount(net);
-      netBalanceElem.style.color = net >= 0 ? '#1565c0' : '#c62828';
-    }
-
-    function addOrUpdateEntry(e) {
-      e.preventDefault();
-
-      const description = descriptionInput.value.trim();
-      const amount = parseFloat(amountInput.value);
-      const type = typeSelect.value;
-
-      if (!description || isNaN(amount) || amount <= 0) {
-        alert('Please enter valid description and amount.');
-        return;
-      }
-
-      if (editId) {
-        entries = entries.map(entry =>
-          entry.id === editId
-            ? { ...entry, description, amount, type }
-            : entry
-        );
-        editId = null;
-        form.querySelector('button[type="submit"]').textContent = 'Add';
-      } else {
-        entries.push({
-          id: Date.now(),
-          description,
-          amount,
-          type
-        });
-      }
-
-      saveEntries();
-      renderEntries(getCurrentFilter());
-      updateSummary();
-      form.reset();
-      descriptionInput.focus();
-    }
-
-    function startEditEntry(id) {
-      const entry = entries.find(e => e.id === id);
-      if (!entry) return;
-      descriptionInput.value = entry.description;
-      amountInput.value = entry.amount;
-      typeSelect.value = entry.type;
-      editId = id;
-      form.querySelector('button[type="submit"]').textContent = 'Update';
-      descriptionInput.focus();
-    }
-
-    function deleteEntry(id) {
-      if (!confirm('Are you sure you want to delete this entry?')) return;
-      entries = entries.filter(e => e.id !== id);
-      saveEntries();
-      renderEntries(getCurrentFilter());
-      updateSummary();
-      if (editId === id) {
-        editId = null;
-        form.reset();
-        form.querySelector('button[type="submit"]').textContent = 'Add';
-      }
-    }
-
-    resetBtn.addEventListener('click', () => {
-      if (confirm('Reset all entries? This action cannot be undone.')) {
-        entries = [];
-        saveEntries();
-        renderEntries('all');
-        updateSummary();
-        form.reset();
-        editId = null;
-        form.querySelector('button[type="submit"]').textContent = 'Add';
-      }
-    });
-
-    function getCurrentFilter() {
-      return document.querySelector('input[name="filter"]:checked').value;
-    }
-
-    filterRadios.forEach(radio => {
-      radio.addEventListener('change', () => {
-        renderEntries(getCurrentFilter());
-      });
-    });
-
-    renderEntries();
-    updateSummary();
-
-    form.addEventListener('submit', addOrUpdateEntry);
-  </script>
 </body>
 </html>
